OO-6514: migrate mapping from tag and OpenMeeting